# TorchQML

./: .gitignore  README.md  __init__.py  config.py  pyproject.toml
QVCC/: qvc1.py
TorchQML/: __init__.py  amp.py  circuit.py  config.py  metrics.py  trainer.py
TorchQML/ansatz/: __init__.py  ansatz4.py
TorchQML/core/: __init__.py  circuit.py  config.py  runtime.py  sym.py  symbols.py  unitary.py
TorchQML/datasets/: __init__.py  eurosat_ms.py  folder.py
TorchQML/distillation/: __init__.py  binary.py  broad_search.py  circuit_ops.py  common.py  (+11 more)
circuits/: circuit.py
core/: __init__.py  circuit.py  config.py  sym.py
data_gen/: moon.py
datasets/: __init__.py  eurosat_ms.py  folder.py
encoding/: __init__.py  amplitude.py  encoding.py
evaluations/: evaluate_Z.py
examples/: distillation_toy.py  qsvm_kernel.py  quickstart.py  synthesis_smoke.py
gates/: __init__.py  expand.py  gate.py  vgate.py
measurements/: expectation_Z.py
models/: __init__.py  pauli_head.py  sumz.py  vectorz.py
ops/: measure.py
plots/: __init__.py  bloch_sphere.py
states/: states1q.py
tests/: gen.py  gen2.py  gen3.py  gen4.py  test_actions.py  test_backend.py  test_baselines.py  test_circuit.py  test_distillation_refactor.py  test_env.py  test_env_all.py  test_experiment_smoke.py  test_gate.py  test_gates.py  test_library_merge.py  test_metrics.py  test_model_smoke.py  test_public_imports.py  test_search_mitm.py  test_unitary.py
training/: __init__.py  losses.py  metrics.py  trainer.py
utils/: backend.py  quantum_ops.py  short.py
wrappers/: gatewrapper.py  symcalc.py
(+88 files in other folders)
